--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-select-us-states": "^0.1.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
